# RPC

./: .gitignore  CMakeLists.txt  README.md
include/config/: config.hpp
include/interceptors/: logger.hpp
include/server/: server.hpp
include/service/: order_service.hpp
protos/order_service/: order.proto
scripts/: proto-gen.sh
src/: client.cpp  main.cpp
src/server/: server.cpp
src/service/: order_service.cpp  order_service.hpp
